Modify the restriction for human-flagged stories
